# dprint-plugin-sortpackagejson

./: .dprint.jsonc  .gitignore  Cargo.toml  README.md  dprint.jsonc  justfile  package.json  rust-toolchain.toml  rustfmt.toml  schema.json
.github/workflows/: ci.yml  publish.yml  release.yml
deployment/npm/: README.md  package.json  tsconfig.json  tsdown.config.ts
deployment/npm/src/: index.ts  setup.ts
deployment/npm/test/: index.test.ts
examples/: gen_schema.rs
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: builder.rs  mod.rs  types.rs
src/sort/: canonical.rs  dependencies.rs  eslint.rs  exports.rs  helpers.rs  mod.rs  nested_alpha.rs  pnpm.rs  prettier.rs  scripts.rs  top_level.rs  workspaces.rs
tests/: schema_in_sync.rs
tests/fixtures/: package.json  regular.json
